--- a/TeamWork_final/block_list.html
+++ b/TeamWork_final/block_list.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sevillana&display=swap" rel="stylesheet">
@@ -60,7 +61,7 @@
                                             <a class="nav-links pr-5" href="shop.html" style="font-size: 24px;">
                                                 Shop
                                             </a>
-                                            <div class="dropdown-menus">
+                                            <div class="dropdown-menus" style="min-width: 230px;">
                                                 <a class="dropdown-items" href="shop.html" style="font-size: 24px;">Quần
                                                     áo Nam</a>
                                                 <a class="dropdown-items" href="shop.html" style="font-size: 24px;">Quần
@@ -101,7 +102,6 @@
         <div id="wp-content">
             <div class="container">
                 <div class="row">
-
                     <div class="col-lg-4 mt-5">
                         <div id="sidebar">
                             <ul class="recent-posts border p-0" style="width: 100%;">
@@ -184,7 +184,6 @@
                                     </a>
                                     <div class="box">
                                         who needs pain while
-
                                         <div class="date mt-2 mb-2 text-capitalize">
                                             12 sep 2021
                                         </div>
@@ -204,13 +203,13 @@
                         <ul class="p-0" style="width: 100%;">
                             <li class="d-flex " style="width: 100%;">
                                 <div class="row">
-                                    <div class="img col-lg-3 col-md-12 ">
+                                    <div class="img col-lg-3 col-md-12 col-sm-12 col-12 ">
                                         <img src="img/block_list/img-blog5-255x255.png" alt="">
                                         <div class="date">
                                             12 <br> <span style="color: rgb(167, 167, 167);">dec 2021</span>
                                         </div>
                                     </div>
-                                    <div class="box pt-3 col-lg-9" style="    padding: 0px 27px 0px 30px; ">
+                                    <div class="box pt-3 col-lg-9 col-md-12 col-sm-12 col-12" style="    padding-left: 30px; ">
                                         <div class="text">
                                             Who needs pain whiles
                                         </div>
@@ -246,7 +245,7 @@
                                             12 <br> <span style="color: rgb(167, 167, 167);">dec 2021</span>
                                         </div>
                                     </div>
-                                    <div class="box pt-3 col-lg-9" style="    padding: 0px 27px 0px 30px; ">
+                                    <div class="box pt-3 col-lg-9" style="    padding-left: 30px; ">
                                         <div class="text">
                                             Who needs pain whiles
                                         </div>
@@ -281,7 +280,7 @@
                                             12 <br> <span style="color: rgb(167, 167, 167);">dec 2021</span>
                                         </div>
                                     </div>
-                                    <div class="box pt-3 col-lg-9" style="    padding: 0px 27px 0px 30px; ">
+                                    <div class="box pt-3 col-lg-9" style="    padding-left: 30px; ">
                                         <div class="text">
                                             Who needs pain whiles
                                         </div>
@@ -316,7 +315,7 @@
                                             12 <br> <span style="color: rgb(167, 167, 167);">dec 2021</span>
                                         </div>
                                     </div>
-                                    <div class="box pt-3 col-lg-9" style="    padding: 0px 27px 0px 30px; ">
+                                    <div class="box pt-3 col-lg-9" style="    padding-left: 30px; ">
                                         <div class="text">
                                             Who needs pain whiles
                                         </div>
@@ -351,7 +350,7 @@
                                             12 <br> <span style="color: rgb(167, 167, 167);">dec 2021</span>
                                         </div>
                                     </div>
-                                    <div class="box pt-3 col-lg-9" style="    padding: 0px 27px 0px 30px; ">
+                                    <div class="box pt-3 col-lg-9" style="    padding-left: 30px; ">
                                         <div class="text">
                                             Who needs pain whiles
                                         </div>
