--- a/TeamWork_final/cart.html
+++ b/TeamWork_final/cart.html
@@ -57,17 +57,21 @@
                                         <a class="nav-links pr-5" href="shop.html" style="font-size: 24px;">
                                             Shop
                                         </a>
-                                        <div class="dropdown-menus">
-                                            <a class="dropdown-items" href="shop.html" style="font-size: 24px;">Quần áo Nam</a>
-                                            <a class="dropdown-items" href="shop.html" style="font-size: 24px;">Quần áo nữ</a>
-                                            <a class="dropdown-items" href="shop.html" style="font-size: 24px;">Quần áo trẻ em</a>
+                                        <div class="dropdown-menus" style="min-width: 230px;">
+                                            <a class="dropdown-items" href="shop.html" style="font-size: 24px;">Quần
+                                                áo Nam</a>
+                                            <a class="dropdown-items" href="shop.html" style="font-size: 24px;">Quần
+                                                áo nữ</a>
+                                            <a class="dropdown-items" href="shop.html" style="font-size: 24px;">Quần
+                                                áo trẻ em</a>
                                         </div>
                                     </li>
                                     <li class="nav-item pr-5">
                                         <a href="cart.html" class="nav-links" style="font-size: 24px;">Cart</a>
                                     </li>
                                     <li class="nav-item pr-5">
-                                        <a href="block_list.html" class="nav-links" style="font-size: 24px;">Block list</a>
+                                        <a href="block_list.html" class="nav-links" style="font-size: 24px;">Block
+                                            list</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="contact.html" class="nav-links" style="font-size: 24px;">Contact</a>
@@ -98,7 +102,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="table-responsive">
-                    <table class="table table-striped">
+                    <table class="table table-striped text-center">
                         <thead>
                             <tr>
                                 <th scope="col"> </th>
@@ -106,7 +110,7 @@
                                 <th scope="col">Available</th>
                                 <th scope="col" class="text-center">Quantity</th>
                                 <th scope="col" class="text-right">Price</th>
-                                <th> </th>
+
                             </tr>
                         </thead>
                         <tbody>
@@ -169,7 +173,9 @@
             <div class="col mb-2">
                 <div class="row">
                     <div class="col-sm-12  col-md-6">
-                        <button class="btn btn-block btn-light">Continue Shopping</button>
+                        <a href="home.html"><button class="btn btn-lg btn-block btn-success text-uppercase">Continue
+                                Shopping</button></a>
+
                     </div>
                     <div class="col-sm-12 col-md-6 text-right">
                         <button class="btn btn-lg btn-block btn-success text-uppercase">Checkout</button>
@@ -180,56 +186,60 @@
     </div>
     <!-- email -->
     <div class="email mt-5"
-    style="background-image: url(https://www.cloud3dprint.com/assets/images/img/1920x1080/img19.jpg);background-position: center 0px; background-repeat: no-repeat ;">
-    <div class="container pt-5 pb-5">
-        <div class="row ">
-            <div class="col-lg-6">
-                <div class="email-info">
-                    <div class="row">
-                        <div class="col-lg-2">
-                            <i class="fa fa-envelope"></i>
-                        </div>
-                        <div class="col-lg-10">
-                            <div>SUBSCRIBE TO OUR NEWSLETTER TO RECEIVE NEWS,
-                                UPDATES, AND ANOTHER STUFF BY EMAIL.</div>
+        style="background-image: url(https://www.cloud3dprint.com/assets/images/img/1920x1080/img19.jpg);background-position: center 0px; background-repeat: no-repeat ;">
+        <div class="container pt-5 pb-5">
+            <div class="row ">
+                <div class="col-lg-6">
+                    <div class="email-info">
+                        <div class="row">
+                            <div class="col-lg-2">
+                                <i class="fa fa-envelope"></i>
+                            </div>
+                            <div class="col-lg-10">
+                                <div>SUBSCRIBE TO OUR NEWSLETTER TO RECEIVE NEWS,
+                                    UPDATES, AND ANOTHER STUFF BY EMAIL.</div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="email-info-2">
-                    <div class="row">
-                        <div class="col-lg-9">
-                            <input type="text" class="pt-md-3 pb-md-3 pr-md-4 pt-sm-3 pb-sm-3 pr-sm-4 "
-                                placeholder="YOUR EMAIL ADDRESS">
+                <div class="col-lg-6">
+                    <div class="email-info-2">
+                        <div class="row">
+                            <div class="col-lg-9">
+                                <input type="text" class="pt-md-3 pb-md-3 pr-md-4 pt-sm-3 pb-sm-3 pr-sm-4 "
+                                    placeholder="YOUR EMAIL ADDRESS">
+                            </div>
+                            <div class="col-lg-3 pt-2">
+                                <button class="btn btn-warning">SIGN UP</button>
+                            </div>
                         </div>
-                        <div class="col-lg-3 pt-2">
-                            <button class="btn btn-warning">SIGN UP</button>
-                        </div>
-                    </div>
 
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
     <!-- end email -->
 
     <!-- footer -->
-    <div id="footer" class="bg-dark p-5">
+    <div id="footer" class="bg-dark">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 d-flex justify-content-between">
-                    <div class="logo d-flex">
-                        <a href=""><img src="img/logo/logo1.png" alt=""></a>
-                        <div class="text-light pt-3 pl-3">
-                            © 2021 | private product
-                        </div>
+                <div class="col-lg-2 col-md-6 text-center pt-md-5">
+                    <a href=""><img src="img/logo/logo1.png" alt=""></a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="text-light pt-3 pl-md-5 pt-sm-5  text-center">
+                        © 2021 | private product
                     </div>
+                </div>
+                <div class="col-lg-3 col-md-6 pt-md-5 pt-sm-5 text-center">
                     <div class="text-light">
                         My Company , Glasgow D04 89GR <br>
                         Call us now: 800-2345-6789
                     </div>
+                </div>
+                <div class="col-lg-3 col-md-6  pt-md-5 pt-sm-5 text-center">
                     <div class="link text-light">
                         <i class="fab fa-facebook-f p-2"></i>
                         <i class="fab fa-twitter p-2"></i>
