--- a/TeamWork_final/contact.html
+++ b/TeamWork_final/contact.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+    <style>
+        *{
+            line-height: 30px;
+        }
+    </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sevillana&display=swap" rel="stylesheet">
@@ -60,7 +65,7 @@
                                             <a class="nav-links pr-5" href="shop.html" style="font-size: 24px;">
                                                 Shop
                                             </a>
-                                            <div class="dropdown-menus">
+                                            <div class="dropdown-menus" style="min-width: 230px;">
                                                 <a class="dropdown-items" href="shop.html" style="font-size: 24px;">Quần
                                                     áo Nam</a>
                                                 <a class="dropdown-items" href="shop.html" style="font-size: 24px;">Quần
@@ -102,7 +107,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h1 style="font-family: sevillana,sans-serif;" class="pt-4">Contact Us</h1>
+                        <h1  class="pt-4">Contact Us</h1>
                         <p class="pt-4"> Lorem ipsum dolor sit amet conse ctetur adipisicing lit, sed do eiusmod tempor
                             incididunt.
                             Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt
