--- a/TeamWork_final/shop.html
+++ b/TeamWork_final/shop.html
@@ -939,5 +939,17 @@
         </div>
     </div>
     <script src="./assets/js/shop.js"></script>
+    <script>
+        $(function () {
+            $(window).scroll(function () {
+                if ($(this).scrollTop() > 100) $(".lentop").fadeIn();
+                else $(".lentop").fadeOut();
+            });
+            $(".lentop").click(function () {
+                $("body,html").animate({ scrollTop: 0 }, "slow");
+            });
+        });
+    </script>
+
 </body>
 </html>
